# dinotrace

./: .ccmalloc  .cvsignore  .gitignore  COPYING  Changes  Makefile.in  NEWS  README.adoc  README.rst  TODO  config.guess  config.sub  configure.ac  configure.in  dinotrace.texi  faq.texi  install-sh  install.texi  make.com  mkinstalldirs
docs/: FAQ.adoc  FAQ.rst  html_texi_clean
lisp/: .cvsignore  Makefile  dinotrace.el  installer.el  sim-log.el
src/: .cvsignore  Makefile.in  bintradef.h  config.h.in  dinodoc.pl  dinotrace.c  dinotrace.h  dist_date.pl  dt_ascii.c  dt_binary.c  dt_config.c  dt_cursor.c  dt_customize.c  dt_dispmgr.c  dt_draw.c  dt_file.c  dt_grid.c  dt_icon.c  dt_post.h  dt_print.c  dt_signal.c  dt_socket.c  dt_util.c  dt_value.c  dt_verilog.c  dt_window.c  functions.h  make.com  recomp.com
traces/: ascii.dino  ascii.tra  dinotrace.dino  dinotrace_release.dino  tempest.dino  vcd.dino  vcd.dmp
