dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/dinotrace.c)
AC_CONFIG_HEADER(src/config.h)

dnl Checks host type
AC_CANONICAL_HOST
HOST=$host
AC_SUBST(HOST)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(PERL,perl)

dnl Checks for libraries.

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h unistd.h sys/file.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_STRUCT_TM
AC_C_INLINE

dnl Checks for system services
AC_PATH_XTRA
X_LIBS=$X_LIBS
AC_SUBST(X_LIBS)

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gethostname strdup)

AC_OUTPUT(Makefile src/Makefile)
