dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/dinotrace.c)
AC_CONFIG_HEADER(src/config.h)

dnl Checks host type
AC_CANONICAL_HOST
HOST=$host
AC_SUBST(HOST)
AC_DEFINE_UNQUOTED(HOST,"$host")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(PERL,perl)

dnl Checks for libraries.
AC_PATH_XTRA
X_LIBS=$X_LIBS
AC_SUBST(X_LIBS)

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h unistd.h sys/file.h math.h)

dnl Checks for typedefs, structures
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for compiler characteristics.
AC_C_INLINE
dnl Warning below, don't know how to fix
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gethostname strdup strcascmp)

dnl Checks for system services

dnl Other install directories
pkgdatadir=${datadir}/dinotrace
AC_DEFINE_UNQUOTED(DINODISK_DEFAULT,"$pkgdatadir")
AC_SUBST(pkgdatadir)

AC_OUTPUT(Makefile src/Makefile)
